--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ Revision history for Map-Metro-Plugin-Map-Amsterdam
  [Enhancements]
 
  [Meta]
+ - Github as repo and issue tracker.
 
  [New Features]
 
