--- a/Changes
+++ b/Changes
@@ -6,8 +6,11 @@ Revision history for Map-Metro-Plugin-Map-Amsterdam
  [Bug Fixes]
 
  [Documentation]
+ - Added a graphviz image of the network.
+ - Added line and station documentation.
 
  [Enhancements]
+ - Changed dist.ini to use @Iller
 
  [Meta]
 
